language/move-lang/tests/move_check/naming/unresolved_type_no_args.move
module M {
    struct Mine { f: A }
    fun foo(x: S): G {
        let _: B = (0: P);
    }
}
